fix: caret vertical position This was using the default value 'stretch' which meant the caret was not vertically aligned within the button.

--- a/source/features/widen-search-field.css
+++ b/source/features/widen-search-field.css
@@ -47,6 +47,7 @@ https://github.com/sindresorhus/refined-github/releases/tag/19.9.16
 /* Hide `Filters` text in repo lists */
 .subnav-search-context summary {
 	display: flex;
+	align-items: center;
 	width: 2.4em;
 	text-indent: -10000px;
 }
